--- a/spec/system/actions/toggleAutoMode.spec.yaml
+++ b/spec/system/actions/toggleAutoMode.spec.yaml
@@ -11,9 +11,7 @@ in:
       global:
         autoMode: false
         pendingEffects: []
-        nextLineConfig:
-          auto:
-            delay: 1000
+        autoplayDelay: 1000
 out:
   global:
     autoMode: true
@@ -22,9 +20,6 @@ out:
       - name: startAutoNextTimer
         delay: 1000
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
 ---
 case: toggle auto mode from true to false
 in:
@@ -32,18 +27,12 @@ in:
       global:
         autoMode: true
         pendingEffects: []
-        nextLineConfig:
-          auto:
-            delay: 1000
 out:
   global:
     autoMode: false
     pendingEffects:
       - name: clearAutoNextTimer
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
 ---
 case: toggle auto mode from false to true with skip mode enabled
 in:
@@ -52,9 +41,7 @@ in:
         autoMode: false
         skipMode: true
         pendingEffects: []
-        nextLineConfig:
-          auto:
-            delay: 1000
+        autoplayDelay: 1000
 out:
   global:
     autoMode: true
@@ -65,9 +52,6 @@ out:
       - name: startAutoNextTimer
         delay: 1000
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
 ---
 case: toggle auto mode from true to false with skip mode enabled
 in:
@@ -76,9 +60,6 @@ in:
         autoMode: true
         skipMode: true
         pendingEffects: []
-        nextLineConfig:
-          auto:
-            delay: 1000
 out:
   global:
     autoMode: false
@@ -86,9 +67,6 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
 ---
 case: toggle auto mode with existing pending effects (disabled to enabled)
 in:
@@ -98,9 +76,7 @@ in:
         pendingEffects:
           - name: existingEffect
             data: test
-        nextLineConfig:
-          auto:
-            delay: 1000
+        autoplayDelay: 1000
 out:
   global:
     autoMode: true
@@ -111,9 +87,6 @@ out:
       - name: startAutoNextTimer
         delay: 1000
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
 ---
 case: toggle auto mode with existing pending effects (enabled to disabled)
 in:
@@ -123,9 +96,6 @@ in:
         pendingEffects:
           - name: existingEffect
             data: test
-        nextLineConfig:
-          auto:
-            delay: 1000
 out:
   global:
     autoMode: false
@@ -134,6 +104,3 @@ out:
         data: test
       - name: clearAutoNextTimer
       - name: render
-    nextLineConfig:
-      auto:
-        delay: 1000
