update for payload

--- a/spec/system/actions/setAutoplayDelay.spec.yaml
+++ b/spec/system/actions/setAutoplayDelay.spec.yaml
@@ -35,7 +35,8 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 500
+        payload:
+          delay: 500
       - name: render
 ---
 case: set autoplay delay with existing pending effects
