--- a/spec/system/actions/startAutoMode.spec.yaml
+++ b/spec/system/actions/startAutoMode.spec.yaml
@@ -19,7 +19,8 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 1000
+        payload:
+          delay: 1000
       - name: render
 ---
 case: start auto mode when already enabled
@@ -36,68 +37,3 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 1000
-      - name: render
----
-case: start auto mode with skip mode enabled
-in:
-  - state:
-      global:
-        autoMode: false
-        skipMode: true
-        pendingEffects: []
-        autoplayDelay: 1000
-out:
-  global:
-    autoMode: true
-    autoplayDelay: 1000
-    skipMode: false
-    pendingEffects:
-      - name: clearSkipNextTimer
-      - name: clearAutoNextTimer
-      - name: startAutoNextTimer
-        delay: 1000
-      - name: render
----
-case: start auto mode with existing pending effects
-in:
-  - state:
-      global:
-        autoMode: false
-        pendingEffects:
-          - name: existingEffect
-            data: test
-        autoplayDelay: 1000
-out:
-  global:
-    autoMode: true
-    autoplayDelay: 1000
-    pendingEffects:
-      - name: existingEffect
-        data: test
-      - name: clearAutoNextTimer
-      - name: startAutoNextTimer
-        delay: 1000
-      - name: render
----
-case: start auto mode with both auto and skip mode enabled
-in:
-  - state:
-      global:
-        autoMode: true
-        skipMode: true
-        pendingEffects:
-          - name: existingEffect
-        autoplayDelay: 1000
-out:
-  global:
-    autoMode: true
-    autoplayDelay: 1000
-    skipMode: false
-    pendingEffects:
-      - name: existingEffect
-      - name: clearSkipNextTimer
-      - name: clearAutoNextTimer
-      - name: startAutoNextTimer
-        delay: 1000
-      - name: render
