--- a/spec/system/actions/toggleAutoMode.spec.yaml
+++ b/spec/system/actions/toggleAutoMode.spec.yaml
@@ -19,7 +19,8 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 1000
+        payload:
+          delay: 1000
       - name: render
 ---
 case: toggle auto mode from true to false
@@ -54,7 +55,8 @@ out:
       - name: clearSkipNextTimer
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 1000
+        payload:
+          delay: 1000
       - name: render
 ---
 case: toggle auto mode from true to false with skip mode enabled
@@ -92,7 +94,8 @@ out:
         data: test
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
-        delay: 1000
+        payload:
+          delay: 1000
       - name: render
 ---
 case: toggle auto mode with existing pending effects (enabled to disabled)
