--- a/spec/system/actions/startAutoMode.spec.yaml
+++ b/spec/system/actions/startAutoMode.spec.yaml
@@ -37,3 +37,6 @@ out:
     pendingEffects:
       - name: clearAutoNextTimer
       - name: startAutoNextTimer
+        payload:
+          delay: 1000
+      - name: render
