--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -36,3 +36,5 @@ vt:
           files: "bgm"
         - title: "SFX"
           files: "sfx"
+        - title: "Keyboard"
+          files: "keyboard"
