--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint:fix": "bun run prettier src -w",
     "coverage": "bun run vitest run --coverage",
     "vt:generate": "bun run esbuild.js && rtgl vt generate --skip-screenshots",
-    "serve": "bun run esbuild.js && bunx serve -p 3004 .rettangoli/vt/_site",
-    "prepare": "husky"
+    "serve": "bun run esbuild.js && bunx serve -p 3004 .rettangoli/vt/_site"
   },
   "dependencies": {
     "immer": "^10.1.1",
